# win

./: README.md  ffmpeg在windows下编程.md  mbedtls在windows下的编程.md  queue.md
back/: Makefile
cmake/: CMakeLists.txt  cmake.md  cmake参考.md
cmake/client/: CMakeLists.txt  Makefile  client.c
cmake/common/: CMakeLists.txt
cmake/common/include/: file_parse_h264.h  share_memory.h
cmake/common/src/: file_parse_h264.c  share_memory.c
cmake/service/: service.c
mbedtls/: cmake.md
mbedtls/src/: Makefile  main.c
知识点/: gdb.md  git使用.md  linux高级环境编程.md  openssl登录邮箱.md  openssl移植.md  smtp邮件问题.md  unix网络编程.md  学习方法.md  安装qtcreator.md  安装vmware.md  模块说明.md  第一次Makefile.md  编程基础.md  记一次海思内核编译与写入.md
知识点/485/: Rs485.c  serial.c
知识点/gb/: gb.rar  gb28181说明.md  onvif说明.md
知识点/gb/gb工具/检测工具(Release版)/: 222 DVRorNVR 检测报告 测试人员(CJC)测试时间(2019年05月21日)19时30分19秒.doc  222 DVRorNVR 检测报告 测试人员(等等)测试时间(2019年05月21日)18时13分01秒.doc  DecoderDllConfig.xml  cascade.xml  log4cxx.properties  使用操作说明.doc  检测工具.exp  检测工具.lib
知识点/gb/gb工具/检测工具(Release版)/StandardDecoder/: StandardPlayCtrl.lib  plug.xml
知识点/gb/gb工具/检测工具(Release版)/res/: My28181TEST.rc2  Thumbs.db
知识点/gb/gb工具/检测工具(Release版)/res/TitleSkins/: LeftTopBorder.psd  Thumbs.db
知识点/gb/gb工具/检测工具(Release版)/新建文件夹/: cascade.xml
知识点/lwd/ipc_doc/: README.md  git_note.md  ipc_module_note.md
知识点/lwd/ipc_doc/ipc_module_note_res/ZTE_5G_doc_ref/: ZTE_5G_debug.md  ZTE_5G_upgrage.md
知识点/lwd/ipc_doc/ipc_module_note_res/log_module_ref/: DailyRecord.c  DailyRecord.h  dotsdk_define.h  syslog.cfg
知识点/lwd/ipc_doc/media_stream_note/: GB28181.md  H.26x_note.md  HISI_note.md  PS_note.md  PTSandDTS_note.md  RTP_note.md  RTSP_note.md  SDP_note.md  SIP_note.md  TS_note.md  onvif_note.md
知识点/v1/: 1400andgb.txt  4G.txt  config.txt  dahua.txt  dahua_invite264.txt  gdb调试.txt  gdb调试过程.txt  gpio操作.txt  himm.txt  image.txt  kade.txt  mqtt.txt  office365.txt  port.txt  qiyeqq.txt  smtp.txt  tcpdump.txt  tftp.txt  数据库操作.txt
知识点/网络测试/: readme.txt  使用方法.doc
知识点/网络测试/ethtool/V500/: ethtool
知识点/网络测试/ethtool/mix100/: ethtool
知识点/网络测试/iperf/V500/: iperf
知识点/网络测试/iperf/mix100/: iperf
知识点/音视频/: magic_rtp_parse_demo_extend.7z
